correct paragraph spacing

--- a/great-idea-website/css/index.css
+++ b/great-idea-website/css/index.css
@@ -96,15 +96,14 @@ header {
 .hero {
 	display: inline-block;
 	width: 250px;
-	text-align: center;
-	padding-left: 66px;
-	margin-top: -100px
+	text-align: center;	
 }
 
 .hero-img {
 	display:inline-block;
-	width: 500px;
-	padding-left: 250px;
+	width: 379x;
+	padding-left: 200px;
+	padding-top: 100px;
 }
 
 .top-content {
@@ -127,10 +126,18 @@ address {
 footer {
 	margin-top: 100px;
 	text-align: center;
+	margin-bottom: 50px;
 }
 
 h1 {
 	font-size: 72px;
+}
+
+p {
+	margin-top: 1em;
+    margin-bottom: 1em;
+    margin-left: 0;
+    margin-right: 0;
 }
 
 .button {
